@@ -264,7 +264,7 @@ double calc_forces_eam(double *xi_opt, double *forces, int flag)
       double eam_force;
       double rho_val, rho_grad, rho_grad_j;
 #ifdef TBEAM
-      int   col_s_F;
+      int   col_F_s;
       double rho_s_val, rho_s_grad, rho_s_grad_j;
 #endif /* TBEAM */
 
@@ -320,6 +320,7 @@ double calc_forces_eam(double *xi_opt, double *forces, int flag)
 		  splint_comb_dir(&calc_pot, xi, neigh->slot[0], neigh->shift[0], neigh->step[0], &phi_grad);
 	      else
 		phi_val = splint_dir(&calc_pot, xi, neigh->slot[0], neigh->shift[0], neigh->step[0]);
+
 	      /* avoid double counting if atom is interacting with a copy of itself */
 	      if (self) {
 		phi_val *= 0.5;
@@ -353,7 +354,7 @@ double calc_forces_eam(double *xi_opt, double *forces, int flag)
 		  forces[stresses + 5] -= neigh->dist.z * tmp_force.x;
 		}
 #endif /* STRESS */
-	      }
+	      }			/* uf */
 	    }
 
 	    /* neighbor in range */
@@ -405,7 +406,7 @@ double calc_forces_eam(double *xi_opt, double *forces, int flag)
 	  col_F = paircol + ntypes + atom->type;
 #ifdef TBEAM
 	  /* column of F of the s-band */
-	  col_s_F = col_F + 2 * ntypes;
+	  col_F_s = col_F + 2 * ntypes;
 #endif /* TBEAM */
 
 #ifndef NORESCALE
@@ -431,21 +432,21 @@ double calc_forces_eam(double *xi_opt, double *forces, int flag)
 #endif /* PARABOLA */
 	  }
 #ifdef TBEAM
-	  if (atom->rho_s > calc_pot.end[col_s_F]) {
+	  if (atom->rho_s > calc_pot.end[col_F_s]) {
 	    /* then punish target function -> bad potential */
-	    forces[limit_p + h] += DUMMY_WEIGHT * 10.0 * dsquare(atom->rho_s - calc_pot.end[col_s_F]);
+	    forces[limit_p + h] += DUMMY_WEIGHT * 10.0 * dsquare(atom->rho_s - calc_pot.end[col_F_s]);
 #ifndef PARABOLA
 	    /* then we use the final value, with PARABOLA: extrapolate */
 	    atom->rho_s = calc_pot.end[col_F_s];
 #endif /* PARABOLA */
 	  }
 
-	  if (atom->rho_s < calc_pot.begin[col_s_F]) {
+	  if (atom->rho_s < calc_pot.begin[col_F_s]) {
 	    /* then punish target function -> bad potential */
-	    forces[limit_p + h] += DUMMY_WEIGHT * 10.0 * dsquare(calc_pot.begin[col_s_F] - atom->rho_s);
+	    forces[limit_p + h] += DUMMY_WEIGHT * 10.0 * dsquare(calc_pot.begin[col_F_s] - atom->rho_s);
 #ifndef PARABOLA
 	    /* then we use the final value, with PARABOLA: extrapolate */
-	    atom->rho_s = calc_pot.begin[col_s_F];
+	    atom->rho_s = calc_pot.begin[col_F_s];
 #endif /* PARABOLA */
 	  }
 #endif /* TBEAM */
@@ -505,31 +506,31 @@ double calc_forces_eam(double *xi_opt, double *forces, int flag)
 #ifdef PARABOLA
 	  forces[energy_p + h] += parab_comb(&calc_pot, xi, col_s_F, atom->rho_s, &atom->gradF_s);
 #elif defined(NORESCALE)
-	  if (atom->rho_s < calc_pot.begin[col_s_F]) {
+	  if (atom->rho_s < calc_pot.begin[col_F_s]) {
 #ifdef APOT
 	    /* calculate analytic value explicitly */
-	    apot_table.fvalue[col_s_F] (atom->rho_s, xi_opt + opt_pot.first[col_s_F], &temp_eng);
+	    apot_table.fvalue[col_F_s] (atom->rho_s, xi_opt + opt_pot.first[col_F_s], &temp_eng);
 	    atom->gradF_s =
-	      apot_grad(atom->rho_s, xi_opt + opt_pot.first[col_s_F], apot_table.fvalue[col_s_F]);
+	      apot_grad(atom->rho_s, xi_opt + opt_pot.first[col_F_s], apot_table.fvalue[col_F_s]);
 	    forces[energy_p + h] += temp_eng;
 #else
 	    /* linear extrapolation left */
-	    rho_s_val = splint_comb(&calc_pot, xi, col_s_F, calc_pot.begin[col_s_F], &atom->gradF_s);
-	    forces[energy_p + h] += rho_val + (atom->rho - calc_pot.begin[col_F]) * atom->gradF;
+	    rho_s_val = splint_comb(&calc_pot, xi, col_F_s, calc_pot.begin[col_F_s], &atom->gradF_s);
+	    forces[energy_p + h] += rho_s_val + (atom->rho - calc_pot.begin[col_F_s]) * atom->gradF_s;
 #endif /* APOT */
-	  } else if (atom->rho_s > calc_pot.end[col_s_F]) {
+	  } else if (atom->rho_s > calc_pot.end[col_F_s]) {
 #ifdef APOT
 	    /* calculate analytic value explicitly */
-	    apot_table.fvalue[col_s_F] (atom->rho_s, xi_opt + opt_pot.first[col_s_F], &temp_eng);
+	    apot_table.fvalue[col_F_s] (atom->rho_s, xi_opt + opt_pot.first[col_F_s], &temp_eng);
 	    atom->gradF_s =
-	      apot_grad(atom->rho_s, xi_opt + opt_pot.first[col_s_F], apot_table.fvalue[col_s_F]);
+	      apot_grad(atom->rho_s, xi_opt + opt_pot.first[col_F_s], apot_table.fvalue[col_F_s]);
 	    forces[energy_p + h] += temp_eng;
 #else
 	    /* and right */
 	    rho_s_val =
-	      splint_comb(&calc_pot, xi, col_s_F, calc_pot.end[col_s_F] - 0.5 * calc_pot.step[col_s_F],
+	      splint_comb(&calc_pot, xi, col_F_s, calc_pot.end[col_F_s] - 0.5 * calc_pot.step[col_F_s],
 	      &atom->gradF_s);
-	    forces[energy_p + h] += rho_s_val + (atom->rho_s - calc_pot.end[col_s_F]) * atom->gradF_s;
+	    forces[energy_p + h] += rho_s_val + (atom->rho_s - calc_pot.end[col_F_s]) * atom->gradF_s;
 #endif /* APOT */
 	  }
 	  /* and in-between */
@@ -537,16 +538,16 @@ double calc_forces_eam(double *xi_opt, double *forces, int flag)
 #ifdef APOT
 	    /* calculate small values directly */
 	    if (atom->rho_s < 0.1) {
-	      apot_table.fvalue[col_s_F] (atom->rho_s, xi_opt + opt_pot.first[col_s_F], &temp_eng);
+	      apot_table.fvalue[col_F_s] (atom->rho_s, xi_opt + opt_pot.first[col_F_s], &temp_eng);
 	      atom->gradF_s =
-		apot_grad(atom->rho_s, xi_opt + opt_pot.first[col_s_F], apot_table.fvalue[col_s_F]);
+		apot_grad(atom->rho_s, xi_opt + opt_pot.first[col_F_s], apot_table.fvalue[col_F_s]);
 	      forces[energy_p + h] += temp_eng;
 	    } else
 #endif
-	      forces[energy_p + h] += splint_comb(&calc_pot, xi, col_s_F, atom->rho_s, &atom->gradF_s);
+	      forces[energy_p + h] += splint_comb(&calc_pot, xi, col_F_s, atom->rho_s, &atom->gradF_s);
 	  }
 #else
-	  forces[energy_p + h] += splint_comb(&calc_pot, xi, col_s_F, atom->rho_s, &atom->gradF_s);
+	  forces[energy_p + h] += splint_comb(&calc_pot, xi, col_F_s, atom->rho_s, &atom->gradF_s);
 #endif /* NORESCALE */
 
 	  /* sum up rho */
@@ -568,7 +569,7 @@ double calc_forces_eam(double *xi_opt, double *forces, int flag)
 	      self = (neigh->nr == i + cnfstart[h]) ? 1 : 0;
 	      col_F = paircol + ntypes + atom->type;	/* column of F */
 #ifdef TBEAM
-	      col_s_F = col_F + 2 * ntypes;
+	      col_F_s = col_F + 2 * ntypes;
 #endif /* TBEAM */
 	      r = neigh->r;
 	      /* are we within reach? */
@@ -584,9 +585,8 @@ double calc_forces_eam(double *xi_opt, double *forces, int flag)
 		/* now we know everything - calculate forces */
 		eam_force = (rho_grad * atom->gradF + rho_grad_j * conf_atoms[(neigh->nr) - firstatom].gradF);
 
-#ifdef TBEAM			/* EAM etc */
-		/* s-band contribution to force for TBEAM */
-		if ((r < calc_pot.end[neigh->col[2]]) || (r < calc_pot.end[col_s_F - ntypes])) {
+#ifdef TBEAM			/* s-band contribution to force for TBEAM */
+		if ((r < calc_pot.end[neigh->col[2]]) || (r < calc_pot.end[col_F_s - ntypes])) {
 		  rho_s_grad =
 		    (r < calc_pot.end[neigh->col[2]]) ? splint_grad_dir(&calc_pot, xi, neigh->slot[2],
 		    neigh->shift[2], neigh->step[2]) : 0.0;
@@ -594,7 +594,7 @@ double calc_forces_eam(double *xi_opt, double *forces, int flag)
 		    rho_s_grad_j = rho_s_grad;
 		  } else {
 		    rho_s_grad_j =
-		      (r < calc_pot.end[col_s_F - ntypes]) ? splint_grad(&calc_pot, xi, col_s_F - ntypes,
+		      (r < calc_pot.end[col_F_s - ntypes]) ? splint_grad(&calc_pot, xi, col_F_s - ntypes,
 		      r) : 0.0;
 		  }
 		  /* now we know everything - calculate forces */
@@ -689,16 +689,14 @@ double calc_forces_eam(double *xi_opt, double *forces, int flag)
     }
 #endif /* APOT */
 
-
 #ifndef NOPUNISH
-#ifndef TBEAM			/* EAM etc */
-    if (0 == myid) {
+    if (myid == 0) {
       int   g;
       for (g = 0; g < ntypes; g++) {
 	/* PARABOLA, WZERO, NORESC - different behaviour */
 #ifdef PARABOLA
 /* constraints on U(n) */
-	forces[dummy_p + ntypes + g] = DUMMY_WEIGHT * parab(&calc_pot, xi, paircol + ntypes + g, 0.0)
+	forces[dummy_p + ntypes + g] = DUMMY_WEIGHT * parab(&calc_pot, xi, paircol + ntypes + g, 0.)
 	  - force_0[dummy_p + ntypes + g];
 /* constraints on U`(n) */
 	forces[dummy_p + g] =
@@ -706,107 +704,70 @@ double calc_forces_eam(double *xi_opt, double *forces, int flag)
 	  .5 * (calc_pot.begin[paircol + ntypes + g] + calc_pot.end[paircol + ntypes + g])) -
 	  force_0[dummy_p + g];
 #elif defined(WZERO)
-	if (calc_pot.begin[paircol + ntypes + g] <= 0.0)
+	if (calc_pot.begin[paircol + ntypes + g] <= 0.)
 	  /* 0 in domain of U(n) */
 /* constraints on U(n) */
-	  forces[dummy_p + ntypes + g] = DUMMY_WEIGHT * splint(&calc_pot, xi, paircol + ntypes + g, 0.0)
+	  forces[dummy_p + ntypes + g] = DUMMY_WEIGHT * splint(&calc_pot, xi, paircol + ntypes + g, 0.)
 	    - force_0[dummy_p + ntypes + g];
 	else
 	  /* 0 not in domain of U(n) */
-	  forces[dummy_p + ntypes + g] = 0.0;	/* Free end... */
+	  forces[dummy_p + ntypes + g] = 0.;	/* Free end... */
 /* constraints on U`(n) */
 	forces[dummy_p + g] =
 	  DUMMY_WEIGHT * splint_grad(&calc_pot, xi, paircol + ntypes + g,
-	  0.5 * (calc_pot.begin[paircol + ntypes + g] + calc_pot.end[paircol + ntypes + g]))
+	  .5 * (calc_pot.begin[paircol + ntypes + g] + calc_pot.end[paircol + ntypes + g]))
 	  - force_0[dummy_p + g];
 #elif defined(NORESCALE)
 	/* clear field */
 	forces[dummy_p + ntypes + g] = 0.0;	/* Free end... */
 	/* NEW: Constraint on U': U'(1.)=0; */
 	forces[dummy_p + g] = DUMMY_WEIGHT * splint_grad(&calc_pot, xi, paircol + ntypes + g, 1.0);
+#ifdef TBEAM
+	/* clear field */
+	forces[dummy_p + 3 * ntypes + g] = 0.0;	/* Free end... */
+	/* NEW: Constraint on U': U'(1.)=0; */
+	forces[dummy_p + 2 * ntypes + g] =
+	  DUMMY_WEIGHT * splint_grad(&calc_pot, xi, paircol + 3 * ntypes + g, 1.0);
+#endif /* TBEAM */
 #else /* NOTHING */
 	forces[dummy_p + ntypes + g] = 0.0;	/* Free end... */
 /* constraints on U`(n) */
 	forces[dummy_p + g] =
 	  DUMMY_WEIGHT * splint_grad(&calc_pot, xi, paircol + ntypes + g,
-	  0.5 * (calc_pot.begin[paircol + ntypes + g] + calc_pot.end[paircol + ntypes + g]))
+	  .5 * (calc_pot.begin[paircol + ntypes + g] + calc_pot.end[paircol + ntypes + g]))
 	  - force_0[dummy_p + g];
+#ifdef TBEAM
+	forces[dummy_p + 3 * ntypes + g] = 0.0;	/* Free end... */
+/* constraints on U`(n) */
+	forces[dummy_p + 2 * ntypes + g] =
+	  DUMMY_WEIGHT * splint_grad(&calc_pot, xi, paircol + 3 * ntypes + g,
+	  .5 * (calc_pot.begin[paircol + 3 * ntypes + g] + calc_pot.end[paircol + 3 * ntypes + g]))
+	  - force_0[dummy_p + 2 * ntypes + g];
+#endif /* TBEAM */
 #endif /* Dummy constraints */
 	tmpsum += dsquare(forces[dummy_p + ntypes + g]);
 	tmpsum += dsquare(forces[dummy_p + g]);
+#ifdef TBEAM
+	tmpsum += dsquare(forces[dummy_p + 3 * ntypes + g]);
+	tmpsum += dsquare(forces[dummy_p + 2 * ntypes + g]);
+#endif /* TBEAM */
       }				/* loop over types */
 #ifdef NORESCALE
       /* NEW: Constraint on n: <n>=1. ONE CONSTRAINT ONLY */
       /* Calculate averages */
       rho_sum /= (double)natoms;
       /* ATTN: if there are invariant potentials, things might be problematic */
-      forces[dummy_p + ntypes] = DUMMY_WEIGHT * (rho_sum - 1.0);
+      forces[dummy_p + ntypes] = DUMMY_WEIGHT * (rho_sum - 1.);
       tmpsum += dsquare(forces[dummy_p + ntypes]);
-#endif /* NORESCALE */
-    }				/* only root process */
-#else /* TBEAM */
-    if (0 == myid) {
-      int   g;
-      int   f_key, f_key_s;
-      for (g = 0; g < ntypes; g++) {
-	/* PARABOLA, WZERO, NORESC - different behaviour */
-#ifdef PARABOLA
-/* constraints on U(n) */
-	forces[dummy_p + ntypes + g] = DUMMY_WEIGHT * parab(&calc_pot, xi, paircol + ntypes + g, 0.0)
-	  - force_0[dummy_p + ntypes + g];
-/* constraints on U`(n) */
-	forces[dummy_p + g] =
-	  DUMMY_WEIGHT * parab_grad(&calc_pot, xi, paircol + ntypes + g,
-	  .5 * (calc_pot.begin[paircol + ntypes + g] + calc_pot.end[paircol + ntypes + g])) -
-	  force_0[dummy_p + g];
-#elif defined(WZERO)
-	if (calc_pot.begin[paircol + ntypes + g] <= 0.0)
-	  /* 0 in domain of U(n) */
-/* constraints on U(n) */
-	  forces[dummy_p + ntypes + g] = DUMMY_WEIGHT * splint(&calc_pot, xi, paircol + ntypes + g, 0.0)
-	    - force_0[dummy_p + ntypes + g];
-	else
-	  /* 0 not in domain of U(n) */
-	  forces[dummy_p + ntypes + g] = 0.0;	/* Free end... */
-/* constraints on U`(n) */
-	forces[dummy_p + g] =
-	  DUMMY_WEIGHT * splint_grad(&calc_pot, xi, paircol + ntypes + g,
-	  0.5 * (calc_pot.begin[paircol + ntypes + g] + calc_pot.end[paircol + ntypes + g]))
-	  - force_0[dummy_p + g];
-#elif defined(NORESCALE)
-	f_key = paircol + ntypes + 1 + g;
-	f_key_s = paircol + 2 * ntypes + 1 + g;
-	/* clear field */
-	forces[dummy_p + ntypes + g] = 0.0;	/* Free end... */
-	/* NEW: Constraint on U': U'(1.)=0; */
-	forces[dummy_p + g] =
-	  DUMMY_WEIGHT * (splint_grad(&calc_pot, xi, f_key, 1.0) + splint_grad(&calc_pot, xi, f_key_s, 1.0));
-	//printf("F %i %i %f \n",dummy_p,g,forces[dummy_p + g]);
-#else /* NOTHING */
-	//f_key = paircol + ntypes + 1 + g;
-	//f_key_s = paircol + 2 * ntypes + 1 + g;
-	forces[dummy_p + ntypes + g] = 0.0;	/* Free end... */
-/* constraints on U`(n) */
-	forces[dummy_p + g] =
-	  DUMMY_WEIGHT * splint_grad(&calc_pot, xi, paircol + ntypes + g,
-	  0.5 * (calc_pot.begin[paircol + ntypes + g] + calc_pot.end[paircol + ntypes + g]))
-	  - force_0[dummy_p + g];
-#endif /* Dummy constraints */
-	tmpsum += dsquare(forces[dummy_p + ntypes + g]);
-	tmpsum += dsquare(forces[dummy_p + g]);
-      }				/* loop over types */
-#ifdef NORESCALE
-      /* NEW: Constraint on n: <n>=1. ONE CONSTRAINT ONLY */
+#ifdef TBEAM
       /* Calculate averages */
-      rho_sum /= (double)natoms;
       rho_s_sum /= (double)natoms;
       /* ATTN: if there are invariant potentials, things might be problematic */
-      forces[dummy_p + ntypes] = DUMMY_WEIGHT * ((rho_sum - 1.0) + (rho_s_sum - 1.0));
-      tmpsum += dsquare(forces[dummy_p + ntypes]);
+      forces[dummy_p + 3 * ntypes] = DUMMY_WEIGHT * (rho_s_sum - 1.);
+      tmpsum += dsquare(forces[dummy_p + 3 * ntypes]);
+#endif /* TBEAM */
 #endif /* NORESCALE */
-    }
-    /* only root process */
-#endif /* END EAM or TBEAM */
+    }				/* only root process */
 #endif /* !NOPUNISH */
 
 #ifdef MPI
