@@ -1,3 +1,6 @@
+potfit-next
++ add tbeam interaction
+
 potfit-0.6.0 (20130821)
 + merge MEAM implementation of Jeremy Nicklas (Ohio State University)
 + add Stillinger-Weber potential (option stiweb)
